# InterfaceTester

./: CMakeLists.txt  README.md  main.cpp
app/: main.cpp
app/qml/: Main.qml
core/: ITestCase.h  Logger.cpp  Logger.h  NetworkInfo.cpp  NetworkInfo.h  TestManager.cpp  TestManager.h
docs/: Logging.md  Network.md
tests/: DisplayTestCase.cpp  DisplayTestCase.h  LanTestCase.cpp  LanTestCase.h  LedTestCase.cpp  LedTestCase.h  StubTestCase.cpp  StubTestCase.h  TemperatureTestCase.cpp  TemperatureTestCase.h
